public/css/styles.css
/* navbar */
* {
    text-decoration: none;
}

html,
body {
    background-color: #000000;
    font-size: 14pt;
    color: #D0D0D0;
}

form {
    color: #D0D0D0;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    font-family: 'Times New Roman', Times, serif;
}

#intro {
    width: 70%;
}

.navbar {
    padding-top: 10px;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    font-size: 30px;
    color: black;
}

.navbar div {
    padding: 0 20px;
}

#start-rating button {
    height: 30px;
    height: 50px;
}


/* search-bar */

.search-head {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    margin-bottom: 30px;
}

.videogames-title {
    font-size: xx-large;
    font-weight: 600;
}

#searchTerm {
    box-sizing: border-box;
    border: 2px solid black;
    border-radius: 5px;
    outline: none;
    height: 50px;
    width: 260px;
    font-size: 20px;
    margin-right: 10px;
}

#search-result {
    background-color: #2b2d2e;
    border: 1px solid;
    padding: 5px;
    text-align: center;
    margin-top: 20px;
}

.result-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#search-result .videogame-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.videogame-text .name {
    width:100%;
    background-color: #d0d85c;
    text-align: center;
    
}
.videogame-text a {
    display: flex;
    justify-content: center;
    padding: 5px 10px;
    width:auto;
    color: #0058b1;
}

.videogame-text a:hover {
    background-color: rgb(92, 216, 92);
    color: black;
    cursor: pointer;
}

#myForm button {
    height: 48px;
}

#error,
.errorMessage {
    font-size: large;
    font-weight: 700;
    font-style: italic;
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: red;
    margin-bottom: 30px;
}

#no-result {
    text-align: center;
    font-size: medium;
    font-family: 'Times New Roman', Times, serif;
    font-weight: 600;
    padding-top: 10px;
}


/* videogame List */

.sort-btn {
    display: flex;
    flex-direction: row;
}

.sort-btn .btn {
    height: 20px;
    border: 1px solid gray;
    height: 50px;
    width: 100px;
    margin: 0 20px;
}

.videogames-heading {
    width: 80%;
    padding: 10px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border: 1px solid;
    box-sizing: border-box;
}

.filter {
    min-width: 0;
}

#videogame-list {
    width: 80%;
    display: grid;
    justify-content: space-evenly;
    align-items: stretch;
    justify-items: stretch;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    box-sizing: border-box;
    background-color: #2b2d2e;
    border: 1px solid;

}

.card {
    margin: 20px;
    display: flex;
    flex-direction: column;
    justify-content: end;
    border: 1px solid;
}

.card .videogame-img {
    width: 100%;
    height: 100%;
}

.card .videogame-img img {
    width: 100%;
    height: 100%;
}

.card .videogame-text {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}


/* login/singup */

#login-form,
#signup-form {
    background-color: #2b2d2e;
    border: 1px solid;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#login-form div {
    margin: 20px;
}

#signup-form div {
    margin: 20px;
}

#linkto-signup,
#linkto-login {
    color: seagreen;
}

#linkto-signup:hover {
    color: white;
}

#linkto-login:hover {
    color: white;
}

/* user page */
#userInfo {
    width: 300px;
    background-color: #2b2d2e;
    border: 1px solid;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    font-family: 'Times New Roman', Times, serif;
}

#userInfo ul {
    list-style: none;
    padding-left: 0;
}

#userInfo ol {
    list-style-position: inside;
    padding-left: 0;
}

/* Game Page */
#gameInfo {
    width: 400px;
    background-color: #2b2d2e;
    border: 1px solid;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    font-family: 'Times New Roman', Times, serif;
}

#gameInfo h1 {
    text-align: center;
}

#gameInfo img {
    max-width: 300px;
    max-height: 400px;
}

/* comment */

#comment-container {
    background-color: #2b2d2e;
    border: 1px solid;
    padding: 20px;
    display: flex;
    flex-direction: column;
}

#comment-section {
    list-style-type: none !important;
    height: auto;
    max-height: 500px;
    overflow: auto;
    width: 500px;
}

#new-comment {
    display: flex;
    flex-direction: column;
    width: 300px;
}

.comment {
    font-size: 16px;
    background-color: #36454F;
    height: auto;
    word-wrap: break-word;
}

/* Create game page */

#create_game_form {
    width: 40%;
}

#create_game_form fieldset {
    background-color: #2b2d2e;
}

#create_game_form input,
textarea,
select {
    width: 100%;
    padding: 6px 4px;
    margin: 4px 0;
    box-sizing: border-box;
}

#create_game_form label,
#submit_area {
    display: block;
}

#create_game_form button {
    margin: 5px 0px;
}

#preview {
    width: 20%;
    background-color: #2b2d2e;
    border: 1px solid;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    font-family: 'Times New Roman', Times, serif;
    text-align: center;
    box-sizing: border-box;

}

#preview dl,
#preview dd {
    margin: 0;
}

#preview dt {
    text-decoration: underline;
    margin: 10px 0px;
}

#preview img {
    width: 200px;
    height: 300px;
}

.error {
    text-align: center;
    width: 20%;
    padding: 2px 4px;
    margin: 2px;
    color: #b41111;
    background: #e9c9c9;
    border: 1px solid #a33a3a;
    box-sizing: border-box;
}

.error:hover {
    background-color: #2b2d2e;
}

/* Rating game page */

.rating-container {
    width: 60%;
    margin: 10px 0px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 10%;
}

.rating-container img {
    width: 80%;
    max-width: 400px;
    height: 500px
}

.Left,
.Right {
    width: 50%;
    max-width: 500px;
    height: 100%;
    background-color: #2b2d2e;
    border: 1px solid;
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    transition: 1s ease;
}

.Left img,
.Right img {
    box-sizing: border-box;
}

.Left img:hover,
.Right img:hover {
    cursor: pointer;
    border: 1px solid green;
}


nav {
    display: flex;
    justify-content: center;
    align-items: center;
}

nav a {
    box-shadow: 0 0 0 transparent;
    background-color: #fff;
    padding: 0 8px;
    color: #000;
    text-decoration: none;
    transition: all 0.2s ease-out;
}

nav a:hover {
    box-shadow: 0 2px 4px #ffffff;
    transform: scale(1.1, 1.1);
}

.makeRed {
    border-color: #b41111;
}

.videogame-link {
    color: #8686ff
}

.videogame-link:visited {
    color: #8686ff;
}

